test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_manual_operator_type.draco
type Complex_t = ("_cmplx", struct {int c_real, c_imag},
                  OPADD | OPSUB | OPMUL | OPDIV | OPNEG |
                  OPABS | OPCPR | OPPUT | OPGET);
Complex_t I = (0, 1);


